--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,9 +1,10 @@
 <header class="cabecalho">
     <h1>Sistema de venda de ingressos</h1>
     <div>
-        <a href="">Login</a>
+        <a href="/usuarios/login">Login</a>
+        <a href="/usuarios/criar-conta">Criar conta</a>
         <a href="">Meus ingressos</a>
-        <a href="">Admin</a>
+        <a href="/usuarios/area-admin">Admin</a>
         <a href="">Sair</a>
     </div>
 </header>
