--- a/views/principal.handlebars
+++ b/views/principal.handlebars
@@ -2,5 +2,7 @@
     <div>
         <h4>Aqui você encontra ingressos para qualquer tipo de evento, compre seus ingressos e veja suas compras.</h4>
         <a href="/ingressos">Ver ingressos</a>
+        <h4>Caso ainda não tenha uma conta, clique no botão abaixo e crie uma com poucos cliques.</h4>
+        <a href="/usuarios/criar-conta">Criar conta</a>
     </div>
 </div>
