--- a/views/criarAdmin.handlebars
+++ b/views/criarAdmin.handlebars
@@ -2,9 +2,10 @@
     <div>
         <h1>{{title}}</h1>
         <form action="">
+            <input type="text" name="nome" placeholder="Nome">
             <input type="email" name="email" placeholder="E-mail">
             <input type="password" name="senha" placeholder="Senha">
-            <button type="submit">Login</button>
+            <button type="submit">Criar admin</button>
         </form>
     </div>
 </div>
