adicionando tela de adicionar ingressos

--- a/views/areaAdmin.handlebars
+++ b/views/areaAdmin.handlebars
@@ -2,7 +2,7 @@
     <h1 class="titulo">{{title}}</h1>
     <div class="admin-area-container">
         <div class="admin-acoes">
-            <a href="">Adicionar ingresso</a>
+            <a href="/ingressos/adicionar-ingresso">Adicionar ingresso</a>
             <a href="/usuarios/criar-admin">Criar novo admin</a>
         </div>
 
