--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,6 +3,7 @@
     <div>
         <a href="/usuarios/login">Login</a>
         <a href="/usuarios/criar-conta">Criar conta</a>
+        <a href="/ingressos">Início</a>
         <a href="">Meus ingressos</a>
         <a href="/usuarios/area-admin">Admin</a>
         <a href="">Sair</a>
