--- a/views/ingressos.handlebars
+++ b/views/ingressos.handlebars
@@ -1,3 +1,11 @@
+{{#if sucesso}}
+    <div class="alerta-sucesso">{{sucesso}}</div>
+{{/if}}
+
+{{#if erro}}
+    <div class="alerta-erro">{{erro}}</div>
+{{/if}}
+
 <div class="container">
     <h1 class="titulo">{{title}}</h1>
     <ul class="lista-ingressos">
