--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,3 +311,19 @@ body {
 .botao-excluir:hover {
     background-color: #b31919;
 }
+
+.alerta-erro {
+    margin: 2em;
+    padding: 20px;
+    background-color: #ff9090;
+    border: 2px solid var(--vermelho);
+    color: var(--vermelho);
+}
+
+.alerta-sucesso {
+    margin: 2em;
+    padding: 20px;
+    background-color: #a3e3b1;
+    border: 2px solid #007e1b;
+    color: #007e1b;
+}
