--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -7,7 +7,7 @@
                 <a href="/usuarios/area-admin">Admin</a>
             {{/if}}
 
-            <a href="/usuarios/meus-ingressos">Meus ingressos</a>
+            <a href="/compras">Meus ingressos</a>
             <a href="/usuarios/logout">Sair</a>
         {{else}}
             <a href="/usuarios/login">Login</a>
